--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cage-a80/fedex-rest",
-    "description": "FedEx REST API",
+    "description": "Laravel FedEx REST API wrapper",
     "type": "library",
     "license": "MIT",
     "keywords": [ "shipping", "fedex", "API", "REST" ],
@@ -17,7 +17,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-main": "1.x-dev"
         },
         "laravel": {
             "providers": [
