--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     },
     "prefer-stable": true,
     "require": {
-        "illuminate/support": "^5.5|^6|^7|^8|^9",
+        "illuminate/support": "^8|^9|^10|^11",
         "guzzlehttp/guzzle": "^7.2",
         "php": ">=7.4.0",
         "ext-curl": "*",
         "ext-json": "*",
-        "psr/log": "^1.1"
+        "psr/log": "^1.0|^2.0|^3.0"
     },
     "extra": {
         "branch-alias": {
